resident home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,3 +90,7 @@ flutter:
     - assets/logo.png
     - assets/earth.png
     - assets/loginpage2.jpg
+    - assets/bin.jpeg
+    - assets/feedback.png
+    - assets/feedbackreply.jpg
+    - assets/dataanalytics.jpeg
