--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-    sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-
+    sdk: flutter # Ensure `flutter:` with `sdk: flutter` is listed only once
+  firebase_core: ^2.0.0 # Specify the firebase_core version once
+  cloud_firestore: ^4.8.0 # Specify Firestore version
+  cupertino_icons: ^1.0.8 # Cupertino icons dependency
+  intl: ^0.18.0 # Add this line
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -90,7 +89,11 @@ flutter:
     - assets/logo.png
     - assets/earth.png
     - assets/loginpage2.jpg
-    - assets/bin.jpeg
+    - assets/bin.png
     - assets/feedback.png
     - assets/feedbackreply.jpg
     - assets/dataanalytics.jpeg
+    - assets/dataanalytics.png
+    - assets/2.jpg
+    - assets/2-removebg-preview.png
+    - assets/recycling_symbol_182651-removebg-preview.png
