--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,3 +97,5 @@ flutter:
     - assets/2.jpg
     - assets/2-removebg-preview.png
     - assets/recycling_symbol_182651-removebg-preview.png
+    - assets/earth2.jpg
+    - assets/earth2r.png
